--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ streamlit==1.28.1
 requests==2.31.0
 python-dotenv==1.0.0
 pydantic==2.5.0
-numpy==1.24.3
-pandas==2.1.3
+numpy>=1.26.0
+pandas>=2.1.3
 scikit-learn==1.3.2
-httpx==0.25.1
+httpx==0.28.1
 aiohttp==3.9.1
 pyyaml==6.0.1
